Add hover effect on theme toggler

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,7 +16,7 @@
     <li>
       <span data-controller="theme"
             data-theme-target="toggler"
-            data-action="click->theme#toggleTheme"
+            data-action="click->theme#click mouseover->theme#mouseover mouseout->theme#mouseout"
             class="theme-toggler">
         🔅
       </span>
