--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,7 +11,11 @@
       <%= link_to "About", "" %>
     </li>
     <li>
-      <%= link_to "Sign In", "", role: "button" %>
+      <% if signed_in? %>
+        <%= link_to "Settings", "" %>
+      <% else %>
+        <%= link_to "Sign In", "", role: "button" %>
+      <% end %>
     </li>
     <li>
       <span data-controller="theme"
