--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,13 +8,13 @@
   </ul>
   <ul>
     <li>
-      <%= link_to "About", "" %>
+      <%= link_to "About", about_path %>
     </li>
     <li>
       <% if signed_in? %>
-        <%= link_to "Settings", "" %>
+        <%= link_to "Settings", settings_path %>
       <% else %>
-        <%= link_to "Sign In", "", role: "button" %>
+        <%= link_to "Sign In", signin_path, role: "button" %>
       <% end %>
     </li>
     <li>
