--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,7 @@
 }
 
 .main {
-  max-width: 500px;
+  max-width: 600px;
 }
 
 .nav-brand {
@@ -57,6 +57,44 @@
   height: 1.75rem;
   border-radius: 9999px;
   margin-right: 0.5rem;
+}
+
+.card {
+  margin: 1rem;
+  padding: 10px;
+}
+
+.chirp-box {
+  padding: 30px;
+  width: 500px;
+  margin-left: 0px;
+  display: flex;
+}
+
+.profile {
+  width: 40px;
+  height: 40px;
+  min-width: 40px;
+  min-height: 40px;
+  border-radius: 40px;
+  margin-right: 20px;
+}
+
+.profile img {
+  width: 40px;
+  height: 40px;
+  border-radius: 9999px;
+}
+
+.username {
+  opacity: 0.7;
+  margin-bottom: 5px;
+  font-size: 0.9rem;
+}
+
+.message {
+  line-height: 1.5;
+  margin-bottom: 0;
 }
 
 @keyframes fade-in-and-out {
