--- a/app/views/chirps/_chirp.html.erb
+++ b/app/views/chirps/_chirp.html.erb
@@ -1,7 +1,7 @@
 <article class="card">
   <div class="chirp-box">
     <div class="profile">
-      <%= image_tag chirp.user.avatar_url %>
+      <%= image_tag chirp.user.avatar_url, class: "avatar" %>
     </div>
     <div class="chirp-contents">
       <div class="username">
