--- a/app/views/chirps/index.html.erb
+++ b/app/views/chirps/index.html.erb
@@ -5,7 +5,7 @@
     <%= turbo_frame_tag "chirps_page_#{@pagy.next}",
                         src: root_path(page: @pagy.next),
                         loading: :lazy do %>
-      <%= 5.times do %>
+      <% 5.times do %>
         <%= render partial: "loading" %>
       <% end %>
     <% end %>
