--- a/app/views/chirps/_chirp.html.erb
+++ b/app/views/chirps/_chirp.html.erb
@@ -2,7 +2,9 @@
   <article class="card">
     <div class="chirp-box">
       <div class="profile">
-        <%= image_tag chirp.user.avatar_url, class: "avatar" %>
+        <%= image_tag chirp.user.avatar_url, 
+                      class: "avatar",
+                      alt: "#{chirp.user.username} avatar" %>
       </div>
       <div class="chirp-contents">
         <div class="username">
@@ -21,7 +23,7 @@
                       method: :delete,
                       data: {
                         turbo_confirm: "Are you sure?"
-                      }%>
+                      } %>
       </div>
     <% end %>
   </article>
