--- a/app/views/chirps/_loading.html.erb
+++ b/app/views/chirps/_loading.html.erb
@@ -1,7 +1,9 @@
 <article class="card">
   <div class="chirp-box">
     <div class="profile">
-      <%= image_tag "https://api.dicebear.com/5.x/fun-emoji/svg?seed=...", class: "avatar" %>
+      <%= image_tag "https://api.dicebear.com/5.x/fun-emoji/svg?seed=...",
+                    class: "avatar",
+                    alt: "Loading avatar" %>
     </div>
     <div class="chirp-contents">
       <div class="username">
@@ -9,8 +11,7 @@
       </div>
       <div class="message">
         ......... ......... ......... ......... ......... ......... ......... ......... ......... ......... 
-        ......... ......... ......... ......... ......... ......... ......... ......... ......... ......... 
-        ......... ......... ......... ......... ......... ......... ......... ......... 
+        ......... ......... ......... .........
       </div>
     </div>
   </div>
