Fix css and refactor forms

--- a/app/views/chirps/index.html.erb
+++ b/app/views/chirps/index.html.erb
@@ -1,3 +1,7 @@
+<% if @new_chirp %>
+  <%= render partial: "new", locals: { new_chirp: @new_chirp } %>
+<% end %>
+
 <%= turbo_frame_tag "chirps_page_#{@pagy.page}" do %>
   <%= render collection: @chirps, partial: "chirp" %>
 
