--- a/app/views/chirps/_form.html.erb
+++ b/app/views/chirps/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(model: @chirp) do |f| %>
-  <%= f.label :content, "🐦 Share your thoughts with the world" %>
-  <%= f.text_area :content,  placeholder: "I feel..." %>
-  <%= f.submit "Chirp" %>
+  <%= f.label(:content, "🐦 Share your thoughts with the world") %>
+  <%= f.text_area(:content, placeholder: "I feel...") %>
+  <%= f.submit("Chirp") %>
 <% end %>
