--- a/app/views/chirps/edit.html.erb
+++ b/app/views/chirps/edit.html.erb
@@ -4,19 +4,19 @@
       <div class="chirp-box">
         <div class="profile">
           <%= image_tag @chirp.user.avatar_url,
-                        class: "avatar",
-                        alt: "#{@chirp.user.username} avatar" %>
+                class: "avatar",
+                alt: "#{@chirp.user.username} avatar" %>
         </div>
         <div class="chirp-contents">
           <div class="username">
             @<%= @chirp.user.username %>
           </div>
-          <%= f.text_area :content, rows: 2, class: "message" %>
+          <%= f.text_area(:content, rows: 2, class: "message") %>
         </div>
       </div>
       <div class="chirp-actions">
         <%= link_to "❌", chirp_path(@chirp) %>
-        <%= f.submit "✅" %>
+        <%= f.submit("✅") %>
       </div>
     <% end %>
   </article>
