--- a/app/views/chirps/_new_form.html.erb
+++ b/app/views/chirps/_new_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @chirp) do |f| %>
+<%= form_with(model: chirp) do |f| %>
   <%= f.label(:content, "🐦 Share your thoughts with the world") %>
   <%= f.text_area(:content, placeholder: "I feel...") %>
   <%= f.submit("Chirp") %>
