--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <%= render partial: "layouts/navbar" %>
     <%= render "layouts/flash" %>
 
-    <main class="container main">
+    <main class="container container--main">
       <%= yield %>
     </main>
   </body>
