--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="container">
   <ul>
     <li>
-      <h1 class="nav-brand">
+      <h1 class="navbar__brand">
         <%= link_to "Chirper", root_path %>
       </h1>
     </li>
@@ -21,7 +21,7 @@
       <span data-controller="theme"
             data-theme-target="toggler"
             data-action="click->theme#click mouseover->theme#mouseover mouseout->theme#mouseout"
-            class="theme-toggler">
+            class="navbar__theme">
         🔅
       </span>
     </li>
