--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,6 +1,10 @@
 <div class="container flashes">
   <% flash.each do |type, message| %>
-    <%= content_tag(:div, class: "flash #{type}", data: { controller: "flash" }) do %>
+    <%= content_tag(
+          :div,
+          class: "flashes__flash flashes__flash--#{type}",
+          data: { controller: "flash" },
+        ) do %>
       <%= content_tag(:small, message) %>
     <% end %>
   <% end %>
