--- a/app/views/chirps/_loading.html.erb
+++ b/app/views/chirps/_loading.html.erb
@@ -1,17 +1,17 @@
-<article class="card">
-  <div class="chirp-box">
-    <div class="profile">
+<article class="card card--chirp">
+  <div class="chirp">
+    <div class="chirp__details">
       <%= image_tag "https://api.dicebear.com/5.x/fun-emoji/svg?seed=...",
             class: "avatar",
             alt: "Loading avatar" %>
-    </div>
-    <div class="chirp-contents">
-      <div class="username">
-        @........
-      </div>
-      <div class="message">
-        ......... ......... ......... ......... ......... ......... ......... ......... ......... .........
-        ......... ......... ......... .........
+      <div>
+        <div class="chirp__username">
+          @........
+        </div>
+        <div class="chirp__message">
+          ......... ......... ......... ......... ......... ......... ......... ......... ......... .........
+          ......... ......... ......... .........
+        </div>
       </div>
     </div>
   </div>
