--- a/app/views/chirps/_chirp.html.erb
+++ b/app/views/chirps/_chirp.html.erb
@@ -5,7 +5,7 @@
         <%= image_tag chirp.user.avatar_url,
               class: "avatar avatar--chirp",
               alt: "#{chirp.user.username} avatar" %>
-        <div>
+        <div class="chirp__content">
           <div class="chirp__username">
             @<%= chirp.user.username %>
           </div>
