--- a/app/views/chirps/_loading.html.erb
+++ b/app/views/chirps/_loading.html.erb
@@ -2,9 +2,9 @@
   <div class="chirp">
     <div class="chirp__details">
       <%= image_tag "https://api.dicebear.com/5.x/fun-emoji/svg?seed=...",
-            class: "avatar",
+            class: "avatar avatar--chirp",
             alt: "Loading avatar" %>
-      <div>
+      <div class="chirp__content">
         <div class="chirp__username">
           @........
         </div>
