--- a/app/views/chirps/_new_form.html.erb
+++ b/app/views/chirps/_new_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(model: chirp) do |f| %>
   <%= f.label(:content, "🐦 Share your thoughts with the world") %>
-  <%= f.text_area(:content, placeholder: "I feel...") %>
+  <%= f.text_area(:content, placeholder: "I feel...", required: true) %>
   <%= f.submit("Chirp") %>
 <% end %>
