--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,7 +12,7 @@
     </li>
     <li>
       <% if signed_in? %>
-        <%= link_to "Settings", settings_path %>
+        <%= link_to "Profile", profile_path %>
       <% else %>
         <%= link_to "Sign In", signin_path, role: "button" %>
       <% end %>
