--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,4 +1,5 @@
 /* Application styles */
+
 @import url('pico.min.css');
 
 /* Loading styles */
@@ -78,6 +79,12 @@ turbo-frame[aria-busy='true'] {
   margin-right: 20px;
 }
 
+.avatar--new-chirp {
+  height: 18px;
+  margin-right: 9px;
+  width: 18px;
+}
+
 /* Chirp */
 
 .card--chirp {
@@ -149,8 +156,15 @@ turbo-frame[aria-busy='true'] {
 }
 
 .chirp__edit small {
-  margin-top: 9px;
   margin-bottom: 0;
+  margin-top: 9px;
+}
+
+/* New Chirp */
+
+.new-chirp__label {
+  align-items: center;
+  display: flex;
 }
 
 /* Profile */
