--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,10 @@
 
   <body>
     <%= render partial: "layouts/navbar" %>
-    <%= render "layouts/flash" %>
+
+    <div id="flash">
+      <%= render "layouts/flash" %>
+    </div>
 
     <main class="container container--main">
       <%= yield %>
