--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,14 @@
 <html>
   <head>
     <title>Chirper</title>
+    <meta property="og:title" content="Chirper">
+    <meta property="og:description" content="Chirper is a microblogging site built to play around with Rails 7, Hotwire, and friends.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://chirper-web.onrender.com">
+    <meta property="og:image" content="chirper.png">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🐦</text></svg>">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
