--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://chirper-web.onrender.com">
     <meta property="og:image" content="chirper.png">
+    <meta property="og:image:width" content="120" />
+    <meta property="og:image:height" content="120" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
