--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <meta property="og:description" content="Chirper is a microblogging site built to play around with Rails 7, Hotwire, and friends.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://chirper-web.onrender.com">
-    <meta property="og:image" content="chirper.png">
+    <meta property="og:image" content="https://chirper-web.onrender.com/chirper.png">
     <meta property="og:image:width" content="120" />
     <meta property="og:image:height" content="120" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
