--- a/app/views/chirps/index.html.erb
+++ b/app/views/chirps/index.html.erb
@@ -1,3 +1,5 @@
+<%= turbo_stream_from "timeline" %>
+
 <% if @new_chirp %>
   <%= turbo_frame_tag @new_chirp do %>
     <%= render partial: "new_form", locals: { chirp: @new_chirp } %>
