Refactor theme controller

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,8 +18,7 @@
       <% end %>
     </li>
     <li>
-      <span data-controller="theme"
-            data-theme-target="toggler"
+      <span data-theme-target="toggler"
             data-action="click->theme#click mouseover->theme#mouseover mouseout->theme#mouseout"
             class="navbar__theme">
         🔅
