--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-controller="theme" data-theme-target="document">
   <head>
     <title>Chirper</title>
     <meta property="og:title" content="Chirper">
